<resources>
    <string name="app_name">ProjectManagement</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="important">Important</string>
    <string name="projects">Projects</string>
    <string name="my_tasks">My Tasks</string>
    <string name="menu">Menu</string>
    <string name="menu_navigation">Navigation</string>

    <!--Create New ProjectDB-->
    <string name="tv_title_cnp">New Project</string>
    <string name="tv_status_cnp">Private</string>
    <string name="et_title_cnp">Title</string>
    <string name="tv_owners_cnp">OWNERS</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_to_project_or_folder">Add to project or folder</string>
    <string name="owner_name">Owner Name</string>
    <string name="todo">indicated access mode is private</string>
    <string name="todo_id_img">replace with owner id</string>
    <string name="create">Create</string>
    <string name="owners">Owners</string>

    <!--Spinner for status-->
    <string-array name="spinner_status">
        <item>New</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Cancelled</item>
    </string-array>

    <!-- Login Fingerprint  -->
    <string name="authenticate_instructions">Click the button below to authenticate your fingerprint.</string>
    <string name="cancel">Cancel</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>
    <string name="touch_sensor">Touch sensor.</string>
    <string name="fingerprint_recognized">Fingerprint recognized.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout">Logout</string>
    <string name="company_list">Company List</string>
    <string name="create_project">Create Project</string>
    <string name="create_task">Create Task</string>
    <string name="create_subtask">Create SubTask</string>
    <string name="users_assigned_to_this_task">Users Assigned To This Task</string>
    <string name="members_assigned_to_this_task">Members Assigned To This Task</string>
    <string name="go_back"><![CDATA[<- Go Back]]></string>


</resources>
