<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/tv_title_cnp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.3"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/tv_title_cnp"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_lock_grey_24dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_mode_cnp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tv_status_cnp" />

        <TextView
            android:id="@+id/tv_create_cnp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/create"
            android:textAlignment="textEnd"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">



    <EditText
        android:id="@+id/et_title_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:background="@android:color/transparent"
        android:padding="15dp"
        />

    <EditText
        android:id="@+id/et_despt_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:padding="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_owners_cnp"
        android:padding="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/todo_id_img" />

        <TextView
            android:id="@+id/tv_owners_cnp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="20dp"
            android:text="@string/owner_name"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/et_startdate_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:padding="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/et_enddate_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:padding="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_addto_cnp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_to_project_or_folder"
        android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

</LinearLayout>