<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/icons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Spinner
            android:id="@+id/spinner_project_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spinner"
            android:entries="@array/spinner_status"
            android:padding="15dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/tv_title_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/tv_despt_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:padding="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_owners_cnp"
            android:padding="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:contentDescription="@string/todo_id_img" />

            <TextView
                android:id="@+id/tv_owners_cnp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="20dp"
                android:text="@string/owner_name"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/tv_startdate_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/tv_enddate_cnp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_add_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add attachment"
            android:padding="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/btn_edit_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:layout_marginTop="20dp"
            android:background="@color/spinner"/>

        <Button
            android:id="@+id/btn_update_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update"
            android:layout_marginTop="20dp"
            android:background="@color/spinner"/>


    </LinearLayout>
</LinearLayout>